fix nav: font size too big, margins too small

--- a/src/sass/blocks/layout/_nav.scss
+++ b/src/sass/blocks/layout/_nav.scss
@@ -115,9 +115,10 @@
         }
         &__folder {
             position: relative;
-            font-size: $font-size-big;
+            font-size: $font-size-base;
             padding-left: 5px;
             padding-right: 5px;
+            margin-bottom: 12px;
             a {
                 color: $color-main;
                 & > svg {
@@ -134,7 +135,7 @@
         &__secondary {
             border-top-color: $color-border-light;
             & > li {
-                font-size: $font-size-base;
+                font-size: $font-size-small;
                 padding-left: 5px;
                 padding-right: 5px;
                 a {
